Created helpers function in pages folder to handle creation and editing of frontend elements and added createElements function

--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
+    <div class="main-container" id="main-container">
+        
+    </div>
     
 
     <script src="./assets/js/scripts.js"></script>
-    <script src="./pages/index.js"></script>
+    <script src="./pages/helpers.js"></script>
+    <script src="./pages/game-ui.js"></script>
+
+    <script src="./app.js"></script>
 </body>
 </html>
