Created logic folder and create game.js file

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="./assets/js/scripts.js"></script>
     <script src="./pages/helpers.js"></script>
     <script src="./pages/game-ui.js"></script>
+    <script src="./logics/game.js"></script>
 
     <script src="./app.js"></script>
 </body>
